[package]
name = "luna_bot"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version="0.11.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
image = "0.24.7"
rusttype = "0.9.3"
imageproc = "0.23.0"
textwrap = "0.16.0"
